crates/pg_syntax/tests/snapshots/postgres_regress/select@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_sort TO off;
---
VariableSetStmt@0..23
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..15 "enable_sort"
  Whitespace@15..16 " "
  To@16..18 "TO"
  Whitespace@18..19 " "
  AConst@19..22
    Off@19..22 "off"
  Ascii59@22..23 ";"

