crates/pg_syntax/tests/snapshots/postgres_regress/select@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO foo VALUES (42),(3),(10),(7),(null),(null),(1);"
---
InsertStmt@0..59
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "foo"
  Whitespace@15..16 " "
  SelectStmt@16..57
    Values@16..22 "VALUES"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..26
      AConst@24..26
        Iconst@24..26 "42"
    Ascii41@26..27 ")"
    Ascii44@27..28 ","
    Ascii40@28..29 "("
    List@29..30
      AConst@29..30
        Iconst@29..30 "3"
    Ascii41@30..31 ")"
    Ascii44@31..32 ","
    Ascii40@32..33 "("
    List@33..35
      AConst@33..35
        Iconst@33..35 "10"
    Ascii41@35..36 ")"
    Ascii44@36..37 ","
    Ascii40@37..38 "("
    List@38..39
      AConst@38..39
        Iconst@38..39 "7"
    Ascii41@39..40 ")"
    Ascii44@40..41 ","
    Ascii40@41..42 "("
    List@42..46
      AConst@42..46
        NullP@42..46 "null"
    Ascii41@46..47 ")"
    Ascii44@47..48 ","
    Ascii40@48..49 "("
    List@49..53
      AConst@49..53
        NullP@49..53 "null"
    Ascii41@53..54 ")"
    Ascii44@54..55 ","
    Ascii40@55..56 "("
    List@56..57
      AConst@56..57
        Iconst@56..57 "1"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

