crates/pg_syntax/tests/snapshots/postgres_regress/select@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM foo ORDER BY f1;
---
SelectStmt@0..30
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..17
    Ident@14..17 "foo"
  Whitespace@17..18 " "
  SortBy@18..29
    Order@18..23 "ORDER"
    Whitespace@23..24 " "
    By@24..26 "BY"
    Whitespace@26..27 " "
    ColumnRef@27..29
      Ident@27..29 "f1"
  Ascii59@29..30 ";"

