crates/pg_syntax/tests/snapshots/postgres_regress/select@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from onek2 where unique2 = 11 and stringu1 = 'ATAAAA';"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..19
    Ident@14..19 "onek2"
  Whitespace@19..20 " "
  Where@20..25 "where"
  Whitespace@25..26 " "
  BoolExpr@26..62
    AExpr@26..38
      ColumnRef@26..33
        Ident@26..33 "unique2"
      Whitespace@33..34 " "
      Ascii61@34..35 "="
      Whitespace@35..36 " "
      AConst@36..38
        Iconst@36..38 "11"
    Whitespace@38..39 " "
    And@39..42 "and"
    Whitespace@42..43 " "
    AExpr@43..62
      ColumnRef@43..51
        Ident@43..51 "stringu1"
      Whitespace@51..52 " "
      Ascii61@52..53 "="
      Whitespace@53..54 " "
      AConst@54..62
        Sconst@54..62 "'ATAAAA'"
  Ascii59@62..63 ";"

