crates/pg_syntax/tests/snapshots/postgres_regress/select@76.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select unique1, unique2 from onek2\n  where (unique2 = 11 and stringu1 < 'B') or unique1 = 0;"
---
SelectStmt@0..92
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..14 "unique1"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..23
    ColumnRef@16..23
      Ident@16..23 "unique2"
  Whitespace@23..24 " "
  From@24..28 "from"
  Whitespace@28..29 " "
  RangeVar@29..34
    Ident@29..34 "onek2"
  Newline@34..35 "\n"
  Whitespace@35..37 "  "
  Where@37..42 "where"
  Whitespace@42..43 " "
  Ascii40@43..44 "("
  BoolExpr@44..91
    BoolExpr@44..75
      AExpr@44..56
        ColumnRef@44..51
          Ident@44..51 "unique2"
        Whitespace@51..52 " "
        Ascii61@52..53 "="
        Whitespace@53..54 " "
        AConst@54..56
          Iconst@54..56 "11"
      Whitespace@56..57 " "
      And@57..60 "and"
      Whitespace@60..61 " "
      AExpr@61..75
        ColumnRef@61..69
          Ident@61..69 "stringu1"
        Whitespace@69..70 " "
        Ascii60@70..71 "<"
        Whitespace@71..72 " "
        AConst@72..75
          Sconst@72..75 "'B'"
    Ascii41@75..76 ")"
    Whitespace@76..77 " "
    Or@77..79 "or"
    Whitespace@79..80 " "
    AExpr@80..91
      ColumnRef@80..87
        Ident@80..87 "unique1"
      Whitespace@87..88 " "
      Ascii61@88..89 "="
      Whitespace@89..90 " "
      AConst@90..91
        Iconst@90..91 "0"
  Ascii59@91..92 ";"

